# shepherd

./: .ansible-lint  .bumpversion.cfg  .clang-format  .codespellrc  .flake8  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  HISTORY.md  LICENSE  Pipfile  README.md  ansible.cfg  build.sh  pyproject.toml  setup.cfg
.github/: dependabot.yml
deploy/: bootstrap.yml  deploy.yml  deployment.yml  dev_acquire_image.yml  dev_cleanup.yml  dev_rebuild_pru.yml  dev_rebuild_sw.yml  dev_redeploy_roles.yml  fetch-hostkeys.yml  install.yml  maintenance.yml  setup-dev-nfs.yml  setup-ext-storage.yml  setup_allow_ssh_from_pwless_host.yml  setup_image_for_emmc_flashing.yml  setup_linux_configuration.yml  setup_linux_performance.yml  setup_linux_security.yml  setup_nw_lease_ip.yml  setup_nw_mac_dhcp_id.yml  setup_openocd.yml  setup_pwdless_ssh_for_host.yml  setup_pwless_ssh_for_host.yml  (+1 more)
software/debug_analyze_time_sync/: Readme.md  config_emulation.yaml  pyproject.toml
software/debug_analyze_time_sync/sync_analysis/: __init__.py  cli.py  logger.py  logic_trace.py  logic_traces.py
software/firmware/pru0-module-py/: Makefile  README.md  pyproject.toml
software/firmware/pru0-module-py/examples/: emulate.py  harvest.py
software/firmware/pru0-module-py/shepherd_pru/: __init__.py  _virtual_pru.py  data_types.py  pru_converter_model.py  pru_harvester_model.py  pru_harvester_simulation.py  pru_source.c  pru_source_model.py  pru_source_simulation.py
software/firmware/pru0-module-py/shp_pru/: __init__.py  _virtual_pru.py  data_types.py  pru_converter_model.py  pru_harvester_model.py  pru_harvester_simulation.py  pru_source_model.py  virtual_harvester_model.py  virtual_harvester_simulation.py
software/firmware/pru0-module-py/tests/: test_math64_safe.py
software/python-package/: example_config_emulation.yaml  example_config_emulator.yml  example_config_harvest.yaml  example_config_harvester.yml  pyproject.toml  setup.cfg  setup.py
software/python-package/debian/: control  postinst
software/python-package/services/: readme.md  shepherd-launcher.service  shepherd-rpc.service  shepherd-watchdog.service  shepherd.service
software/python-package/shepherd/: __init__.py  benchmark.py  calibration.py  calibration_default.py  cli.py  commons.py  datalog.py  datalog_reader.py  eeprom.py  h5_writer.py  launcher.py  logger.py  logger_config.py  shared_memory.py  sheep_writer.py  shepherd_debug.py  shepherd_emulator.py  shepherd_harvester.py  shepherd_io.py  shepherd_recorder.py  shepherd_sharedmem.py  sysfs_interface.py  target_io.py  testbench_bug.py  testbench_longrun.py  virtual_converter.py  virtual_converter_data.py  virtual_converter_defs.yml  virtual_converter_model.py  virtual_harvester.py  virtual_harvester_config.py  virtual_harvester_data.py  virtual_harvester_defs.yml  virtual_harvester_model.py  virtual_source.py  virtual_source_config.py  virtual_source_data.py  virtual_source_defs.yml  virtual_source_model.py
software/python-package/shepherd_launcher/: __init__.py
software/python-package/shepherd_sheep/: __init__.py  cli.py  commons.py  eeprom.py  h5_monitor_abc.py  h5_monitor_kernel.py  h5_monitor_ntp.py  h5_monitor_phc2sys.py  h5_monitor_ptp.py  h5_monitor_sheep.py  h5_monitor_sysutil.py  h5_monitor_uart.py  h5_recorder_gpio.py  h5_recorder_pru.py  h5_writer.py  launcher.py  logger.py  monitor_abc.py  monitor_kernel.py  monitor_ptp.py  monitor_sheep.py  monitor_sysutil.py  monitor_uart.py  shared_mem_gpio_output.py  shared_mem_iv_input.py  shared_mem_iv_output.py  shared_mem_util_output.py  shared_memory.py  shepherd_debug.py  shepherd_emulator.py  shepherd_harvester.py  shepherd_io.py  sysfs_interface.py  target_io.py  target_io_v24.py  target_io_v25.py  usage_log.py
software/python-package/shepherd_watchdog/: __init__.py
software/python-package/tests/: _test_cal_data.yaml  _test_cal_meas.yaml  _test_capedata.yaml  _test_config_emulation.yaml  _test_config_harvest.yaml  _test_config_virtsource.yaml  conftest.py  example_cal_data.yml  example_cal_meas.yml  example_calib.yml  example_calib_meas.yml  example_capedata.yml  example_config_emulation.yml  example_config_emulator.yml  example_config_harvest.yml  example_config_harvester.yml  example_config_virtsource.yml  example_virtsource_settings.yml  firmware.md  firmware_msp430_sleep.hex  firmware_msp430_testable.hex  firmware_nrf52_demo_rf.elf  firmware_nrf52_powered.hex  firmware_nrf52_sleep.hex  firmware_nrf52_testable.hex  test__files.py  test_calibration.py  test_cli_misc.py  test_cli_programmer.py  test_cli_run_task.py  test_cli_sheep.py  test_datalogging.py  test_eeprom.py  test_emulation.py  test_harvest.py  test_recording.py  test_sheep_cli.py  test_sysfs_interface.py  test_virtual_source.py  virtsource_settings.yml
software/python-package/tests_manual/: profiler_cli.py  testbench_directRW.py  testbench_direct_rw.py  testbench_gen_fake.py  testbench_longrun.py
software/shepherd-calibration/: README.md  pyproject.toml  setup.cfg
software/shepherd-calibration/shepherd_cal/: __init__.py  calibration.py  calibration_plot.py  calibrator.py  calibrator_cli.py  cli.py  cli_helper.py  click_helper.py  logger.py  profile.py  profile_analyzer.py  profile_calibration.py  profile_cape.py  profiler.py  profiler_cli.py
software/shepherd-herd/: README.md  pyproject.toml  setup.cfg
software/shepherd-herd/examples/: run_experiment.py
software/shepherd-herd/shepherd_herd/: __init__.py  cli.py  herd.py  herd_cli.py  herd_cli.typer  logger.py  open_ocd_cli.old  sheep_control.py
software/shepherd-herd/test_manual/: 01_harvest.py  02_emulate.py  02_emulate_pru.py  02_emulate_py.py  README.md
software/shepherd-herd/tests/: conftest.py  firmware.md  firmware_nrf52_powered.hex  test_cli_basic.py  test_cli_emu.py  test_cli_hrv.py  test_cli_prog.py  test_cli_programmer.py  test_herd_basic_cli.py  test_herd_hrv_cli.py
software/time_sync_analyzer/: Readme.md  pyproject.toml
software/time_sync_analyzer/sync_analysis/: __init__.py  logic_trace.py  logic_traces.py
(+595 files in other folders)
