[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
root = "./"
include = ['./shepherd_cal', ]
pythonVersion = "3.10"
pythonPlatform = "All"
# strict = ["./"]
#reportUnknownParameterType = true
#reportUnknownArgumentType = true
#reportUnknownMemberType = true
reportMissingParameterType = true
