[metadata]
name = shepherd_herd
version = attr: shepherd_herd.__version__
author = Kai Geissdoerfer, Ingmar Splitt
author_email = kai dot geissdoerfer at tu-dresden dot de
maintainer_email = ingmar dot splitt at tu-dresden dot de
license = MIT
url = https://pypi.org/project/shepherd-herd
project_urls =
    Tracker = https://github.com/orgua/shepherd/issues
    Source = https://github.com/orgua/shepherd
description = Synchronized Energy Harvesting Emulator and Recorder CLI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testbed, beaglebone, pru, batteryless, energyharvesting, solar
platforms = unix, linux, osx, cygwin, win32, win64
classifiers =
    # How mature is this project? Common values are
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =./
zip_safe = True
include_package_data = True
python_requires = >= 3.8
install_requires =
    click
    click-config-file
    numpy
    fabric
    pyYAML

[options.entry_points]
console_scripts =
    shepherd-herd = shepherd_herd:main

[options.packages.find]
where=./
