[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sync_analysis"
authors = [{name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"}]
maintainers = [{email = "ingmar.splitt@tu-dresden.de"}]
license = {text = "MIT"}
description = "Collection of tools to analyze Sync-behavior, recorded with saleae logic pro"
keywords = ["testbed", "beaglebone", "pru", "logic pro"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

requires-python = ">= 3.10"
dependencies = [
    "click>=8.1.3",
    "numpy",
    "pandas",
    "chromalog",
]


[project.optional-dependencies]
dev = [
    "twine",
    "pre-commit",
    "pyright",
    "ruff",
]
test = [
    "pytest>7.4.0",
    "pytest-timeout",
    "pytest-click",
    "coverage",
]

[project.urls]
Homepage = "https://shepherd.cfaed.tu-dresden.de"
Documentation = "https://orgua.github.io/shepherd"
Issues = "https://github.com/orgua/shepherd/issues"
Source = "https://github.com/orgua/shepherd"

[project.scripts]
sync-analysis = "sync_analysis.cli:cli"

[tool.setuptools]
package-dir = {"" = "."}
zip-safe = true
include-package-data = true
platforms = ["unix", "linux"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "sync_analysis.__version__"}

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = "-vvv --stepwise"
# continue after fail: sudo pytest-3 --stepwise

[tool.pyright]
root = "./"
include = ['./sync_analysis', ]
pythonVersion = "3.10"
pythonPlatform = "Linux"
reportMissingParameterType = true
