[project]
name = "shepherd_pru"
description = "C-Bindings of the pru-code for virtual harvester, converter & power source"
keywords = ["testbed", "beaglebone", "pru", "batteryless", "energyharvesting", "solar"]

authors = [
    {name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},
]
maintainers = [
    {name = "Ingmar Splitt", email = "ingmar.splitt@tu-dresden.de"},
]

license = {text = "MIT"}
dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
requires-python = ">= 3.10"
dependencies = [
    "shepherd-core[elf,inventory]>=2024.8.2",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://orgua.github.io/shepherd"
Documentation = "https://orgua.github.io/shepherd"
Issues = "https://github.com/orgua/shepherd/issues"
Source = "https://github.com/orgua/shepherd"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
zip-safe = true
include-package-data = true
platforms = ["unix", "linux"] #"osx", "cygwin", "win32", "win64"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.so"]

[tool.setuptools.dynamic]
version = {attr = "shepherd_pru.__version__"}

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = "-vvv  --stepwise"
